Updated project files
- Updated Cgen.Audio submodule
- Submodule projects now integrated properly

--- a/Source/CXO2/CXO2.csproj
+++ b/Source/CXO2/CXO2.csproj
@@ -101,7 +101,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="OpenTK.NETCore" Version="1.1.2749.6433" />
+    <ProjectReference Include="..\Cgen.Audio\Source\Cgen.Audio\Cgen.Audio.csproj" />
   </ItemGroup>
 
 </Project>
